# audiobook

./: .gitignore  README.txt  pyproject.toml  pytest.ini
.claude/: settings.local.json
docs/harness/: README.md  acceptance-corpus.md  acceptance-rubric.md  agent-harness-rules.md  architecture-boundaries.md  change-control.md  current-phase.md  external-dependencies.md  product-contract.md  repo-hygiene.md  temporary-bridges-register.md  terminology-and-truth-labels.md  traceability-matrix.md
docs/superpowers/plans/: 2026-03-29-audiobook-mvp-phase1.md
docs/superpowers/specs/: 2026-03-29-audiobook-converter-design.md  2026-03-29-phase2-phase3-plan.md
scripts/: download_genshin_models.py  setup_gptsovits_models.py
src/audiobook/: __init__.py  cli.py  config.py
src/audiobook/engines/: __init__.py  character.py  consistency.py  parser.py  scene.py  synthesis.py  voice_match.py
src/audiobook/models/: __init__.py  base.py  character.py  fragment.py  novel.py  voice.py
src/audiobook/processors/: __init__.py  pipeline.py
src/audiobook/repositories/: __init__.py  jobs.py
src/audiobook/schemas/: __init__.py  jobs.py  voices.py
src/audiobook/services/: __init__.py  conversion.py  jobs.py
src/audiobook/storage/: __init__.py  voice_library.py
src/audiobook/utils/: exception_report.py  preview.py  progress.py
src/audiobook/web/: __init__.py  app.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_cli.py
tests/unit/engines/: test_character_engine.py  test_consistency.py  test_parser.py  test_parser_block.py  test_scene.py  (+2 more)
(+25 files in other folders)
